new proj/src/objects/GE_ES_Contracts__c.object
<CustomObject>
    <description>This is a generic Contract object created which can be used by all the other modules as well.</description>
    <fields>
        <fullName>GE_ES_Account_City__c</fullName>
        <formula>GE_ES_Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Country__c</fullName>
        <formula>GE_ES_Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_State_Province__c</fullName>
        <formula>GE_ES_Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Street_Address__c</fullName>
        <formula>GE_ES_Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Zip_Code__c</fullName>
        <formula>GE_ES_Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account  Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Agreement_Title__c</fullName>
        <label>Agreement Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contract_Entity_Alias__c</fullName>
        <label>Contract Entity Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contract_Id__c</fullName>
        <externalId>true</externalId>
        <label>Contract Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_DUNS_Number__c</fullName>
        <formula>GE_ES_Account__r.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Discount_Rates__c</fullName>
        <label>Discount/Rates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_GE_Marketing_Name__c</fullName>
        <formula>GE_ES_Account__r.GE_HQ_Marketing_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE Marketing Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Internal_Contract_Reference__c</fullName>
        <label>Internal Contract Reference #</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water ES</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Review before to be sent to channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting to be sent to Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting execution by Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold by GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Execution by GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed-Legacy Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sub_P_L__c</fullName>
        <label>Sub P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW-BOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW-CollDamage Unplanned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW-Perf Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GT Inlet Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&amp;LES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Deal CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Deal Tran MMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Deal Tran O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTR Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts-Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts-NUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prolec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS-Perf, Remote &amp; Emissions</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_T_C_Checklist_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;C Checklist Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_User_Lead_Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales/Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContractsUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_User_Region__c</fullName>
        <formula>TEXT( GE_ES_User_Lead_Sales_Person__r.GE_HQ_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_User_Sub_Region__c</fullName>
        <formula>TEXT( GE_ES_User_Lead_Sales_Person__r.GE_HQ_Sub_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Sub-Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <description>This field is Used for Accounts Module</description>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converteam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier2__c</fullName>
        <description>This Field is Used for Accounts Module</description>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prolec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS Electrical Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation &amp; Lifecycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Plant Optimization (TPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Activated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Activated_Date__c</fullName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Agreement_Category__c</fullName>
        <formula>TEXT( GE_PRM_Recommendation_Link__r.GE_PRM_Agreement_Category__c )</formula>
        <label>Agreement Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Agreement_ID_Link__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+Id , &apos;Agreement ID&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Agreement_ID__c</fullName>
        <label>Agreement ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Awaiting_Rev_bfr_sent_to_Chn_Date__c</fullName>
        <label>Awaiting review before sending to Ch.</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Awaiting_execution_by_Channel_Dt__c</fullName>
        <label>Awaiting execution by Ch.</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Awaiting_execution_by_GE_Date__c</fullName>
        <label>Awaiting execution by GE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Awaiting_to_be_sent_to_Channel_Dt__c</fullName>
        <label>Awaiting to be sent to Ch.</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Business_Tier_1__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Type__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Representative (SR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor (DR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant (SMC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Reseller (VAR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller (RSL)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Company_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Signed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContractsSigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Company_Signed_Date__c</fullName>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_End_Date_Comments__c</fullName>
        <label>Contract End Date Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Exc_by_Ch_Cycle_Time__c</fullName>
        <formula>GE_PRM_Awaiting_execution_by_GE_Date__c - GE_PRM_Awaiting_execution_by_Channel_Dt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Execution by Ch.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Execute_by_GE_Cycle_Time__c</fullName>
        <formula>GE_PRM_Activated_Date__c - GE_PRM_Awaiting_execution_by_GE_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Execution by GE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Generation_Cycle_Time__c</fullName>
        <formula>GE_PRM_Awaiting_Rev_bfr_sent_to_Chn_Date__c -
GE_PRM_Recommendation_Link__r.GE_PRM_Appointment_Number__r.GE_PRM_Application_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Generation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Number_Formula__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Number__c</fullName>
        <label>Contract Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_On_hold_by_GE_Cycle_Time__c</fullName>
        <label>Contract On hold by GE</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Review_by_GE_Cycle_Time__c</fullName>
        <formula>GE_PRM_Awaiting_to_be_sent_to_Channel_Dt__c - GE_PRM_Awaiting_Rev_bfr_sent_to_Chn_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Review by GE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Status__c</fullName>
        <formula>TEXT(GE_ES_Status__c)</formula>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Term_months__c</fullName>
        <label>Contract Term (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Customer_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ContractsSigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Customer_Signed_Date__c</fullName>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Customer_Signed_Title__c</fullName>
        <label>Customer Signed Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Days_to_Expire__c</fullName>
        <formula>GE_PRM_Contract_End_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_End_to_End_Appointment_Cycle_Time__c</fullName>
        <formula>GE_PRM_Activated_Date__c - GE_PRM_Recommendation_Link__r.GE_PRM_Appointment_Number__r.GE_PRM_Application_Launched_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End-to-End Appointment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Market_Segments_to_be_Served__c</fullName>
        <formula>GE_PRM_Recommendation_Link__r.GE_PRM_Market_Seg_to_be_Served__c</formula>
        <label>Market Segments to be Served</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_Agreement_Formula__c</fullName>
        <label>Master Agreement # Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Agreement</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_agreement_ID__c</fullName>
        <label>Master agreement ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_On_Hold_by_GE_Date__c</fullName>
        <label>On Hold by GE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Opportunity_Driver__c</fullName>
        <label>Opportunity Driver</label>
        <picklist>
            <picklistValues>
                <fullName>*LONG-TERM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 5/8 x 0.438</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 5/8 x 0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 x 0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 x 0.575</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 x 0.625</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 x 0.812</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 x 0.875</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 x 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.5 x 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 x 1.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 x 0.625</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 x 0.812</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 x 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 x 0.688</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 x 0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 x 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 x 0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 x 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 x 0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 x 0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 x 0.625</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 x 0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 x 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 x 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 x 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 x 1.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 x 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 x 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_PnL_Channel_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Channel Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Previous_Contract__c</fullName>
        <label>Previous Contract #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_RChannel_Type__c</fullName>
        <formula>TEXT( GE_PRM_Recommendation_Link__r.GE_PRM_Recommended_channel_type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Recommendation_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommendation Link</label>
        <referenceTo>GE_PRM_Recommendation__c</referenceTo>
        <relationshipName>RecommendationContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Recommendation_Owner_Email__c</fullName>
        <label>Recommendation Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>GE_PRM_Business_Tier_1__c</controllingField>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia, New Zealand, Fiji  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Asia - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East ,  North Africa  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Saharan Africa  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe  - Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Regional_Compliance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Compliance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Special_Terms__c</fullName>
        <label>Special Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Std_Activated_Date__c</fullName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>